post documentation swag
